# yainna

./: .trunkignore  Cargo.toml  README.md  Trunk.toml  index.html  ОПИСАНИЕ_ФАЙЛОВ.txt  ПРИМЕРЫ_НАЗВАНИЙ_ФОТО.txt
.github/workflows/: rust.yml  static.yml
doc/: conventions.md  editor-setup.md  idea.md  tasklist.md  vision.md  workflow.md  ИТОГИ_РАБОТЫ.txt  КАК_ДОБАВИТЬ_ФОТО.md  НАЧНИТЕ_ЗДЕСЬ.txt  О_ВРЕМЕННЫХ_ФОТО.txt  СПИСОК_НУЖНЫХ_ФОТО.md  СТРУКТУРА_ФОТО.txt  ШПАРГАЛКА_ФОТО.txt
src/: data.rs  main.rs
static/: content.yaml  yandex_55be5113a5902e68.html
static/fonts/: gilroy.css
static/images/: README.md
static/images/portfolio/: README.md
static/images/portfolio/brows/: ПОМЕСТИТЕ_СЮДА_ФОТО_БРОВЕЙ.txt
static/images/portfolio/lashes/: ПОМЕСТИТЕ_СЮДА_ФОТО_РЕСНИЦ.txt
static/images/portfolio/makeup/: ПОМЕСТИТЕ_СЮДА_ФОТО_МАКИЯЖА.txt
