[package]
name = "yainna"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
gloo-net = "0.5"
gloo-console = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
